# nostr-rest

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contrib/scripts/: check-crate.sh
doc/: ndk-rest.service  nostr-rest.service
src/: error.rs  handler.rs  logger.rs  main.rs
src/config/: mod.rs  model.rs
