[package]
name = "nostr-rest"
version = "0.1.0"
edition = "2021"
description = "Nostr Rest API"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/rust-nostr/nostr-rest"
repository = "https://github.com/rust-nostr/nostr-rest.git"
license = "MIT"
readme = "README.md"
keywords = ["nostr", "api", "rest"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
bincode = "1.3"
clap = { version = "4.1", features = ["derive"] }
dirs = "4.0"
nostr-sdk = { version = "0.26", default-features = false }
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.37"
toml = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
