[package]
name = "nostr-rest"
version = "0.1.0"
edition = "2021"
description = "Nostr Rest API"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/rust-nostr/nostr-rest"
repository = "https://github.com/rust-nostr/nostr-rest.git"
license = "MIT"
readme = "README.md"
keywords = ["nostr", "api", "rest"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bincode = "1.3" # TODO: to remove
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "1470b8b00437e586fb86035484f942d6202db83a", default-features = false }
redis = { version = "0.28", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["net"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
